# stellar-shield-wallet-v3

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: stellar.yml
anonymousFeedbackSmartContract/: Cargo.toml  hello_world.wasm
anonymousFeedbackSmartContract/contracts/hello-world/: Cargo.toml
anonymousFeedbackSmartContract/contracts/hello-world/src/: lib.rs  test.rs
anonymousFeedbackSmartContract/contracts/hello-world/test_snapshots/test/: test_create_and_fetch_feedback.1.json  test_cross_contract_audit_sync.1.json
anonymousFeedbackSmartContract/frontend-bindings/: README.md  package-lock.json  package.json
anonymousFeedbackSmartContract/frontend-bindings/src/: index.ts
public/: index.html
src/: App.js  index.css
src/components/: FetchFeedback.js  Freighter.js  Header.js  SendFeedback.js  Soroban.js
