[workspace.dependencies]
soroban-sdk = "27.0.0"

[workspace]
resolver = "2"
members = [
    "anonymousFeedbackSmartContract/contracts/hello-world"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
